<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/tagged_image_height"
        android:id="@+id/imgForTagging"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTagForImage"
        android:visibility="gone"
        android:hint="@string/plz_enter_tag_for_image"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/btnDone"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />

    <View
        android:id="@+id/cstmView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="#c1c1c1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"
        android:id="@+id/btnPick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"
        android:id="@+id/btnCamera"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/download_by_url"
        android:id="@+id/btnDownload"
        android:layout_gravity="center_horizontal" />


</LinearLayout>